Updates on common / configuration files